# SOILL_Chatbot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  render-demo.yaml  render.yaml
apps/admin/: db_init.py  ocr_preprocess.py  process_files.py  pyproject.toml  reporter.py
apps/admin/scripts/: preprocess.sh
apps/api/: Dockerfile  main.py  pyproject.toml
apps/api/routes/: __init__.py  chat.py
apps/chatbot/: Dockerfile  app.py  chainlit_en-GB.md  pyproject.toml
apps/chatbot/.chainlit/: config.toml
apps/chatbot/public/: soill_welcome.css
documents/: OCR_PDF_PreProcessingWorkflow.md  approach.md  deployment.md  local-ui-testing.md
sql/: 001_init.sql
web/: chat.css  chat.js  demos.html  index.html  mock-site-page.html  mock-site-popup.html  mock-site.css  widget-iframe.js
web/soill2030-demo/: config.js  embed-chat.js  index.html  styles.css  widget-iframe.js
web/soill2030-demo/chat/: chat.css  chat.js  index.html
