[project]
name = "soill-chatbot-workspace"
version = "0.1.0"
description = "SOILL Public RAG Chatbot monorepo"
readme = "README.md"
requires-python = ">=3.11,<3.14"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/soill",
    "apps/chatbot",
    "apps/admin",
]

[dependency-groups]
dev = []
