[project]
name = "soill-admin"
version = "0.1.0"
description = "Local admin CLIs for SOILL chatbot (ingest, reports, schema)"
requires-python = ">=3.11,<3.14"
dependencies = [
    "soill",
    "wordcloud>=1.9.6",
]

[project.scripts]
soill-process = "process_files:main"
soill-report = "reporter:main"
soill-db-init = "db_init:main"
soill-ocr-preprocess = "ocr_preprocess:main"

[tool.uv.sources]
soill = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["process_files.py", "reporter.py", "db_init.py", "ocr_preprocess.py"]
