[project]
name = "soill-chatbot"
version = "0.1.0"
description = "SOILL public RAG chatbot (Chainlit)"
requires-python = ">=3.11,<3.14"
dependencies = [
    "soill",
    "chainlit==2.11.0",
]

[tool.uv.sources]
soill = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["app.py"]
